--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "express": "^4.15.2",
     "material-ui": "^0.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
