--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "material-ui": "^0.17.4",
+    "morgan": "^1.8.1",
     "mysql": "^2.13.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
