--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starting setup for react redux project",
   "main": "index.js",
   "scripts": {
-    "start": "node dev_server.js",
+    "start": "node client/dev_server.js",
     "bundle": "node_modules/.bin/webpack --config webpack.deploy.config.js --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
