--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^0.23.1",
     "file-loader": "^0.10.1",
     "image-webpack-loader": "^3.3.0",
+    "nodemon": "^1.11.0",
     "postcss-loader": "^0.9.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.1",
