--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.4.0",
     "material-ui": "^0.17.4",
     "morgan": "^1.8.1",
     "mysql": "^2.13.0",
