--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "material-ui": "^0.17.4",
     "morgan": "^1.8.1",
     "mysql": "^2.13.0",
+    "nodemon": "^1.11.0",
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
