--- a/package.json
+++ b/package.json
@@ -1,57 +1,31 @@
 {
-  "name": "react_starter",
+  "name": "flash_cards",
   "version": "1.0.0",
-  "description": "Starting setup for react redux project",
+  "description": "An app for storing and reviewing flash cards",
   "main": "index.js",
   "scripts": {
-    "start": "node client/dev_server.js",
-    "bundle": "node_modules/.bin/webpack --config webpack.deploy.config.js --progress --colors",
-    "server": "nodemon ./server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Scott Bowler",
-  "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Learning-Fuze/react_starter.git"
+    "url": "git+https://github.com/Learning-Fuze/C2.17_flash_cards.git"
   },
+  "author": "Team Flash Cards",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Learning-Fuze/C2.17_flash_cards/issues"
+  },
+  "homepage": "https://github.com/Learning-Fuze/C2.17_flash_cards#readme",
   "dependencies": {
-    "axios": "^0.16.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
-    "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "jsonwebtoken": "^7.4.0",
-    "material-ui": "^0.17.4",
     "morgan": "^1.8.1",
-    "mysql": "^2.13.0",
-    "nodemon": "^1.11.0",
-    "prop-types": "^15.5.8",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.5",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
-    "redux-form": "^6.6.3",
-    "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "mysql": "^2.13.0"
   },
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.13.0",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.10.1",
-    "image-webpack-loader": "^3.3.0",
-    "nodemon": "^1.11.0",
-    "postcss-loader": "^0.9.1",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "nodemon": "^1.11.0"
   }
 }
