--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An app for storing and reviewing flash cards",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
