--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.15.2",
     "jsonwebtoken": "^7.4.0",
     "morgan": "^1.8.1",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "nodemailer": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
